--- a/_posts/2019-02-10-CNN.md
+++ b/_posts/2019-02-10-CNN.md
@@ -1,8 +1,8 @@
 ---
 title: "CNN (Convolution Neural Network)"
 date: 2019-02-10 08:26:28 -0400
-categories: [Machine_Learning]
-tags: [Machine_Learning,HS]
+categories: [Deep_Learning]
+tags: [Deep_Learning,HS]
 ---
 
 본 포스팅은 CNN에 대한 [블로그](http://taewan.kim/post/cnn/)와 부산 대학교 랩실의 [강의 노트](http://infosec.pusan.ac.kr/wp-content/uploads/2017/11/CNN-and-RNN-%EC%9D%B4%EB%A1%A0.pdf)를 바탕으로 이뤄졌고, 예시 코드는 모두, 함께 공부하는 고동형 학우의 [깃허브](https://github.com/DonghyungKo/naver_movie_review_sentiment_classification) 의 코드를 인용하고 변형하여 사용하였습니다. 문제 시, 바로 내리겠습니다.
